--- a/style.css
+++ b/style.css
@@ -31,3 +31,9 @@ h1, h2 {
   text-shadow: 0 0 15px var(--hover-color);
 }
 
+#name, #profession {
+  font-family: "Rock Salt", cursive;
+  font-size: xx-large;
+}
+
+
