--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('/w3images/profile_girl.jpg');
+  background-image: url('/images/profile-pic.jpg');
   min-height: 100%;
 }
 
@@ -29,6 +29,12 @@ article,aside,details,figcaption,figure,footer, header,main,menu,nav,section {
 footer #copyright{
   font-size: 16px;
 }
+
+footer{
+  padding: 20px;
+}
+
+
 
 summary {
   display: list-item
